# pydantic-deepagents

./: .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_REPORT.md  CONTENT_PLAN.md  CONTRIBUTING.md  DESKTOP_APP_FEASIBILITY.md  FEATURE_GAP_REPORT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_DESKTOP.md  Makefile  PR_DESCRIPTION.md  README.md  ROADMAP.md  SYSTEM_REVIEW.md  all_preds.jsonl  install.sh  mkdocs.yml  models.txt  openrouter:minimax__minimax-m2.5.pydantic-deep.json  predictions.jsonl  pyproject.toml  test_pred.jsonl
.github/scripts/: verify_108.py
.github/workflows/: ci.yml  desktop.yml  uv-lock-sync.yml
apps/acp/: README.md  __init__.py  __main__.py  server.py
apps/cli/: PRODUCT_REPORT.md  README.md  agent.py  app.py  clipboard_image.py  commands.py  config.py  credentials.py  debug_log.py  forking.py  fuzzy.py  goal.py  init.py  interactive.py  keys_cmd.py  keystore.py  known_models.py  local_context.py  main.py  mcp_store.py  messages.py  model_history.py  onboarding_cli.py  openrouter_models.py  prompts.py  provider_setup.py  providers.py  reminder.py  run.py  text_heuristics.py  tips.py  tui.py  update.py
apps/deepresearch/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml
apps/desktop/: README.md  example-diagram.md  example_chart.html  index.html  launcher.py  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/gateway/: README.md  __init__.py  __main__.py  agents.py  app.py  auth.py  fsbrowse.py  keys.py  models.py  schemas.py  screenshot.py  session_manager.py  skills.py  transcript.py  uploads.py
apps/harbor/: AGENTS.md  README.md  agent.py
apps/harbor_agent/: README.md  __init__.py  install-pydantic-deep.sh.j2  pydantic_deep_agent.py
apps/swebench_agent/: ANALYSIS.md  README.md  cli.py  instance.py  runner.py
cli/: README.md  __init__.py  agent.py  clipboard.py  commands.py  config.py  diff_display.py  display.py  init.py  interactive.py  local_context.py  main.py  non_interactive.py  picker.py  prompts.py  providers.py  theme.py  tool_display.py
cli/commands/: commit.md  explain.md  fix.md  pr.md  review.md  test.md
cli/middleware/: __init__.py  loop_detection.py
deepresearch/: README.md  pyproject.toml
deepresearch/skills/diagram-design/: SKILL.md
deepresearch/src/deepresearch/: __init__.py  agent.py  app.py  config.py  middleware.py  prompts.py  types.py
deepresearch/static/: app.js  styles.css
docs/: getting-help.md  guardrails.md  index.md  installation.md  streaming.md  testing.md  tracing.md  type-error-fixes-learnings.md
docs/advanced/: acp.md  agent-spec.md  browser.md  capabilities.md  checkpointing.md  context-files.md  context-management.md  cost-tracking.md  eviction.md  fallback-models.md  forking.md  goal.md  hooks.md  human-in-the-loop.md  index.md  liteparse.md  mcp.md  memory.md  message-queue.md  middleware.md  monitor.md  multi-user.md  output-styles.md  periodic-reminder.md  plan-mode.md  processors.md  structured-output.md  stuck-loop-detection.md  subagents.md  teams.md  web-tools.md
docs/api/: agent.md  backends.md  capabilities.md  checkpointing.md  context-files.md  forking.md  goal.md  hooks.md  index.md  mcp.md  memory.md  message-queue.md  monitoring.md  output-styles.md  (+6 more)
examples/: README.md  basic_guardrails.py  basic_streaming.py  basic_tracing.py  basic_usage.py  combined_tracing_guardrails.py  composite_backend.py  custom_tools.py  deterministic_testing.py  docker_sandbox.py  file_uploads.py  filesystem_backend.py  human_in_the_loop.py  interactive_chat.py  mcp_server.py  skills_usage.py  streaming.py  subagents.py  thinking.py  web_tools.py  xquik_search.py
harbor_agent/: README.md  install-pydantic-deep.sh.j2  pydantic_deep_agent.py
pydantic_deep/: __init__.py  _compat.py  _text.py  agent.py  deps.py  goal.py  instructions.py  models.py  prompts.py  runtimes.py  session.py  spec.py  styles.py  subagents.py  types.py
swebench_agent/: README.md  __init__.py  cli.py  instance.py  prompt.py  runner.py  types.py
tests/: conftest.py  test_agent.py  test_agent_extended.py  test_backends.py  test_browser.py  test_capabilities.py  test_checkpointing.py  test_cli_agent.py  test_cli_assistant_message.py  test_cli_clipboard_image.py  test_cli_command_coverage.py  test_cli_commands.py  test_cli_config.py  test_cli_credentials.py  test_cli_diff_view.py  test_cli_dispatch.py  test_cli_display.py  test_cli_fuzzy.py  test_cli_goal.py  test_cli_history_picker.py  test_cli_image_paste.py  test_cli_interactive.py  test_cli_local_context.py  test_cli_local_models.py  test_cli_loop_detection.py  test_cli_main.py  test_cli_mcp.py  test_cli_new_features.py  test_cli_non_interactive.py  test_cli_run.py  test_cli_session_picker.py  test_cli_settings.py  test_cli_theme.py  test_cli_tool_call_widget.py  test_cli_tool_display.py  test_cli_update.py  test_compat.py  test_context.py  test_context_manager.py  test_cost_tracking.py  (+57 more)
trajs/: astropy__astropy-12907.md  astropy__astropy-13033.md  astropy__astropy-13236.md  astropy__astropy-13398.md  astropy__astropy-13453.md  astropy__astropy-13579.md  astropy__astropy-13977.md  astropy__astropy-14096.md  astropy__astropy-14182.md  astropy__astropy-14309.md  astropy__astropy-14365.md  astropy__astropy-14369.md  astropy__astropy-14508.md  astropy__astropy-14539.md  astropy__astropy-14598.md  astropy__astropy-14995.md  astropy__astropy-7166.md  astropy__astropy-7336.md  astropy__astropy-7606.md  astropy__astropy-7671.md  astropy__astropy-8707.md  astropy__astropy-8872.md  django__django-10097.md  django__django-10554.md  django__django-10880.md  django__django-10914.md  django__django-10973.md  django__django-10999.md  django__django-11066.md  django__django-11087.md  django__django-11095.md  django__django-11099.md  django__django-11119.md  django__django-11133.md  django__django-11138.md  django__django-11141.md  django__django-11149.md  django__django-11163.md  django__django-11179.md  django__django-11206.md  (+460 more)
(+2440 files in other folders)
