[project]
name = "deepresearch"
version = "0.1.0"
description = "Autonomous research agent powered by pydantic-deep + MCP"
requires-python = ">=3.12"
dependencies = [
    "pydantic-deep[web]",
    "pydantic-ai[mcp]",
    "pydantic-ai-middleware",
    "pydantic-ai-backend[docker]",
    "summarization-pydantic-ai",
    "subagents-pydantic-ai",
    "pydantic-ai-todo",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
export = ["markdown>=3.5", "weasyprint>=60.0"]

[tool.uv.sources]
pydantic-deep = { path = "..", editable = true }
pydantic-ai-backend = { path = "../../pydantic-ai-backend", editable = true }
pydantic-ai-middleware = { path = "../../pydantic-ai-middleware", editable = true }
summarization-pydantic-ai = { path = "../../pydantic-ai-summarization", editable = true }
subagents-pydantic-ai = { path = "../../pydantic-ai-subagents", editable = true }
pydantic-ai-todo = { path = "../../pydantic-ai-todo", editable = true }

[project.scripts]
deepresearch = "deepresearch.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepresearch"]
